# Advent-Of-Code

./: Makefile  README.md  lnklists  lnklists.cpp
2015/c++/: CMakeLists.txt
2015/python/: main.py  theft.py
2016/python/: hand  main.py  test.py
2017/c++/: .gitignore  CMakeLists.txt  Makefile  README.md  prints.h  timings
2017/c++/Day 1/: main.cpp
2017/c++/Day 2/: input  main.cpp
2017/c++/src/: AOC.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  disjointset.cpp  disjointset.h  knothash.h  main.cpp  prints.h  unionfind.h
2017/c++/src/day23 notes/: level1  level2  level3  level4  level5  level6
2017/python/: __init__.py  advent.py  mine  theirs
2018/c++/: .gitignore  Makefile  README.md  aoc.h  compare  gmon.out  out  point.h  prints.h  stats  timing.h  timings  timings.md
2019/: Makefile  intcode.h  util.h
2019/Day 1/: input  main  main.cpp
2019/Day 2/: main  main.cpp
2019/Day 3/: input  main.cpp
2019/Day 4/: main.cpp
2019/Day 5/: main.cpp
2019/Python/: advent.py
2019/Python_v2/: advent.py
2019/c++/: Makefile  a.out  (+13 more)
2021/c++/: CMakeLists.txt
2021/c++/input/: day17.txt  day25.txt
2021/c++/src/: AOC.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  main.cpp  prints.h
(+601 files in other folders)
